<resources>
    <string name="app_name">Paediatric Stroke Triage Tool</string>
    <string name="button">Button</string>
    <string name="button1">Button</string>
    <string name="button2">Button</string>
    <string name="button3">Button</string>
    <string name="triage">Triage</string>
    <string name="stroke">Stroke</string>
    <string name="data">Data</string>
    <string name="other">other</string>
    <string name="please_input_request_variables">Please input request variables!</string>
    <string name="_2_gender">2. Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="_1_date_of_birth">1. Date of Birth</string>
    <string name="_3_past_medical_history">3. Past medical history</string>
    <string name="_4_sudden_onset_of_symptoms">4. Sudden onset of symptoms</string>
    <string name="_5_woke_with_symptoms">5. Woke with symptoms</string>
    <string name="_5_well_wake_before">5. Weel wake before</string>
    <string name="_6_transport_to_hospital_by_ambulane">6. Transport to hospital by ambulane</string>
    <string name="submit">Submit</string>
    <string name="_8_any_focal_sensory_sign">8. Any focal sensory sign</string>
    <string name="_10_any_focal_neurological_sign">10. Any focal neurological sign</string>
    <string name="_9_any_speech_deficit">9. Any speech deficit</string>
    <string name="textview">textview</string>
    <string name="_7_any_focal_motor_sign">7.any_focal_motor_sign</string>
    <string name="next">Next</string>
    <string name="_11_referred_by_health_practitioner">11. Referred by health practitioner</string>
    <string name="_12_high_category">12. High category</string>
    <string name="_1_or_2">1 or 2</string>
    <string name="_3_5">3 - 5</string>
    <string name="symptoms">Symptoms</string>
    <string name="_13_headache">13. Headache</string>
    <string name="_14_vomit">14. Vomit</string>
    <string name="_1_gender">1. Gender</string>
    <string name="_2_date_of_birth">2. Date of Birth</string>
    <string name="_15_Dizziness">15. dizziness</string>
    <string name="todo">TODO</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="_2_past_medical_history">2. past_medical history</string>
    <string name="_2_past_medical_hospital_history">2. Past Medical Hospital History</string>
    <string name="test">test</string>
    <string name="textview00">TextView</string>
    <string name="calculate">Calculate</string>
    <string name="_1_headache">1. Headache</string>
    <string name="_10_vision">10. Vision</string>
    <string name="_11_ataxia">11. Ataxia</string>
    <string name="_9_loss_of_consciousness">9. Loss of consciousness</string>
    <string name="_8_altered_mental_status">8. Altered mental status</string>
    <string name="_6_focal_weakness">6. Focal weakness</string>
    <string name="_4_speechloss">4. Speechloss</string>
    <string name="_5_focal_numbness">5. Focal numbness</string>
    <string name="_3_dizziness">3. Dizziness</string>
    <string name="_11_vertigo">11. Vertigo</string>
    <string name="_7_seizure">7. Seizure</string>
    <string name="_12_other">12. Other</string>
    <string name="_2_vomiting">2. Vomiting</string>
    <string name="_3_woke_with_symptoms">3. Woke with symptoms</string>
    <string name="_1_patient_ur">1. Patient UR</string>
    <string name="_5_transport_to_hospital_by_ambulance">5. Transport to hospital by ambulance</string>
    <string name="_2_age_of_patient">2. Age of Patient</string>
    <string name="_4_past_medical_history">4. Past Medical History</string>
    <string name="_3_gender">3. Gender</string>
    <string name="_4_well_in_the_week_before_presentation">4. Well in the week before presentation</string>
    <string name="radiobutton">RadioButton</string>
    <string name="textview2">TextView</string>
</resources>
