<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/symptoms2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:fillViewport="false">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/UR"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:text="@string/_1_patient_ur"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/UR_Text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/Age_text"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:text="@string/_2_age_of_patient"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/Age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/gender_text"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:text="@string/_3_gender"
            android:textColor="@android:color/black" />

        <RadioGroup
            android:id="@+id/gender_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/male"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/male" />

            <RadioButton
                android:id="@+id/female"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/female" />

        </RadioGroup>

        <TextView
            android:id="@+id/pmhx"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:text="@string/_4_past_medical_history"
            android:textColor="@android:color/black" />

        <RadioGroup
            android:id="@+id/pmhx_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/pmhx_y"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Yes" />

            <RadioButton
                android:id="@+id/pmhx_n"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="No" />

        </RadioGroup>

        <TextView
            android:id="@+id/woke"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:text="5. Woke with symptoms"
            android:textColor="@android:color/black" />

        <RadioGroup
            android:id="@+id/woke_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/woke_y"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Yes" />

            <RadioButton
                android:id="@+id/woke_n"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="No" />

        </RadioGroup>

        <TextView
            android:id="@+id/wellweekb4"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:text="6. Well in the week before presentation"
            android:textColor="@android:color/black" />

        <RadioGroup
            android:id="@+id/wellweekb4_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/wellweekb4_y"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Yes" />

            <RadioButton
                android:id="@+id/wellweekb4_n"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="No" />

        </RadioGroup>

        <TextView
            android:id="@+id/medicaltransport"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:text="7. Transport to hospital by ambulance"
            android:textColor="@android:color/black" />

        <RadioGroup
            android:id="@+id/medicaltransport_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/medicaltransport_y"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Yes" />

            <RadioButton
                android:id="@+id/medicaltransport_n"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="No" />

        </RadioGroup>


        <TextView
            android:id="@+id/headache"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_1_headache" />

        <RadioGroup
            android:id="@+id/headache_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/headache_y"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Yes" />

            <RadioButton
                android:id="@+id/headache_n"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="No" />

        </RadioGroup>

        <TextView
            android:id="@+id/vomit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_2_vomiting" />

        <RadioGroup
            android:id="@+id/vomit_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/vomit_y"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Yes" />

            <RadioButton
                android:id="@+id/vomit_n"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="No" />

        </RadioGroup>

        <TextView
            android:id="@+id/dizziness"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_3_dizziness" />

        <RadioGroup
            android:id="@+id/dizziness_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/dizziness_y"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Yes" />

            <RadioButton
                android:id="@+id/dizziness_n"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="No" />

        </RadioGroup>

        <TextView
            android:id="@+id/speechloss"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_4_speechloss" />

        <RadioGroup
            android:id="@+id/speechloss_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/speechloss_y"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Yes" />

            <RadioButton
                android:id="@+id/speechloss_n"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="No" />

        </RadioGroup>

        <TextView
            android:id="@+id/focalnumb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_5_focal_numbness" />

        <RadioGroup
            android:id="@+id/focalnumb_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/focalnumb_y"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Yes" />

            <RadioButton
                android:id="@+id/focalnumb_n"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="No" />

        </RadioGroup>

        <TextView
            android:id="@+id/focalweak"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_6_focal_weakness" />

        <RadioGroup
            android:id="@+id/focalweak_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/focalweak_y"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Yes" />

            <RadioButton
                android:id="@+id/focalweak_n"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="No" />

        </RadioGroup>

        <TextView
            android:id="@+id/seizure"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_7_seizure" />

        <RadioGroup
            android:id="@+id/seizure_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/seizure_y"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Yes" />

            <RadioButton
                android:id="@+id/seizure_n"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="No" />

        </RadioGroup>

        <TextView
            android:id="@+id/mentalstate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_8_altered_mental_status" />

        <RadioGroup
            android:id="@+id/mentalstate_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/mentalstate_y"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Yes" />

            <RadioButton
                android:id="@+id/mentalstate_n"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="No" />

        </RadioGroup>

        <TextView
            android:id="@+id/loc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_9_loss_of_consciousness" />

        <RadioGroup
            android:id="@+id/loc_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/loc_y"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Yes" />

            <RadioButton
                android:id="@+id/loc_n"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="No" />
        </RadioGroup>

        <TextView
            android:id="@+id/vision"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_10_vision" />

        <RadioGroup
            android:id="@+id/vision_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/vision_y"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Yes" />

            <RadioButton
                android:id="@+id/vision_n"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="No" />
        </RadioGroup>

        <TextView
            android:id="@+id/ataxia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_11_ataxia" />

        <RadioGroup
            android:id="@+id/ataxia_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/ataxia_y"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Yes" />

            <RadioButton
                android:id="@+id/ataxia_n"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="No" />
        </RadioGroup>

        <TextView
            android:id="@+id/vertigo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_11_vertigo" />

        <RadioGroup
            android:id="@+id/vertigo_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/vertigo_y"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Yes" />

            <RadioButton
                android:id="@+id/vertigo_n"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="No" />
        </RadioGroup>

        <TextView
            android:id="@+id/other"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_12_other" />

        <RadioGroup
            android:id="@+id/other_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/other_y"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Yes" />

            <RadioButton
                android:id="@+id/other_n"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="No" />
        </RadioGroup>

        <Button
            android:id="@+id/button5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Button" />
    </LinearLayout>
</ScrollView>

