<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/demographic"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.qi.paediatricstroketriagetool.Fragment1">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/UR"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:text="@string/_1_patient_ur"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/UR_Text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/Age_text"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:text="@string/_2_age_of_patient"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/Age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/gender_text"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:text="@string/_3_gender"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/gender_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/male"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/male" />

            <RadioButton
                android:id="@+id/female"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/female" />

        </RadioGroup>

        <TextView
            android:id="@+id/pmhx_text"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:text="@string/_4_past_medical_history"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/pmhx_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/pmhx_y"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Yes" />

            <RadioButton
                android:id="@+id/pmhx_n"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="No" />

        </RadioGroup>

        <TextView
            android:id="@+id/woke_text"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:text="5. Woke with symptoms"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/woke_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/woke_y"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Yes" />

            <RadioButton
                android:id="@+id/woke_n"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="No" />

        </RadioGroup>

        <TextView
            android:id="@+id/wellweekb4_text"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:text="6. Well in the week before presentation"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/wellweekb4_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/wellweekb4_y"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Yes" />

            <RadioButton
                android:id="@+id/wellweekb4_n"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="No" />

        </RadioGroup>

        <TextView
            android:id="@+id/medicaltransport_text"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:text="7. Transport to hospital by ambulance"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/medicaltransport_group"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/medicaltransport_y"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Yes" />

            <RadioButton
                android:id="@+id/medicaltransport_n"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="No" />

        </RadioGroup>

        <Button
            android:id="@+id/button6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button" />

    </LinearLayout>

</FrameLayout>
